# npm_pre_scan

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  run_layer0.py
.claude/: settings.local.json
data/: top_packages.txt  top_scoped_packages.txt  worm_iocs.txt
docker/: Dockerfile  fuzz_exports.js  run_layer2.sh  run_layer3.sh
dummy_packages/dummy_obfuscated/: index.js  package.json
dummy_packages/dummy_typosquat/: index.js  package.json
layer0/: __init__.py  age_check.py  checker.py  maintainer.py  namespace.py  registry.py  typosquat.py
src/: age_check.rs  checker.rs  combosquat.rs  lib.rs  main.rs  maintainer.rs  models.rs  namespace.rs  registry.rs  report.rs  signatures.rs  typosquat.rs
src/layer1/: checks.rs  mod.rs  tarball.rs  version_diff.rs  worm_signature.rs
src/layer2/: classify.rs  mod.rs  profile.rs
src/layer3/: classify.rs  diff.rs  mod.rs
tests/: full_pipeline.rs  layer0_dummy.rs  layer1_dummy.rs  layer1_worm.rs  layer2_classify.rs  layer2_dynamic.rs  layer3_diff.rs  layer3_dynamic.rs  report_aggregate.rs
