[package]
name = "npm-pre-scan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "npm-pre-scan"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4" }
colored = "2"
anyhow = "1"
flate2 = "1"
tar = "0.4"
tempfile = "3"
regex = "1"
walkdir = "2"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
chrono = "0.4"
serde_json = "1"
